# image-compressor-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  plugin.toml
src/: lib.rs  main.rs  plugin.rs
